objects/EUR_CRM_Fair_Share_Audit_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>Fair_Share_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>Fair_Share_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipName>Fair_Share_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Eye_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eye Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Fair_Share_Comparison_Audit__c</fullName>
        <label>Fair Share Comparison Audit</label>
        <referenceTo>EUR_CRM_Fair_Share_Comparison_Audit__c</referenceTo>
        <relationshipLabel>Fair Share Audit Item (EU)</relationshipLabel>
        <relationshipName>Fair_Share_Audit_Item_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Competitor__c</fullName>
        <formula>IF(
OR( EUR_CRM_Brand__r.EUR_CRM_Is_Competitor__c ,
 EUR_CRM_Brand_Quality__r.EUR_CRM_Quality_Is_Competitor__c, 
  EUR_CRM_Brand_Quality_Size__r.EUR_CRM_BrandQualitySize_Is_Competitor__c ),true, false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mobile_ID__c</fullName>
        <description>technical field represents Mobile ID from Convivio. Use for checking for data duplication</description>
        <label>Mobile ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_Facings__c</fullName>
        <label>No. of PR Facings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_competitor_Facings__c</fullName>
        <label>No. of competitor Facings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Name__c</fullName>
        <formula>IF ( 
ISBLANK(EUR_CRM_Brand__r.Name), 
(IF ( 
ISBLANK(EUR_CRM_Brand_Quality__r.Name), 
EUR_CRM_Brand_Quality_Size__r.Name , EUR_CRM_Brand_Quality__r.Name)),EUR_CRM_Brand__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <label>Fair Share Audit Item (EU)</label>
    <nameField>
        <displayFormat>FSI-{0000000000}</displayFormat>
        <label>Fair Share Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fair Share Audit Item (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Off_Trade_Fair_Share_Audit_Item</fullName>
        <active>true</active>
        <label>EUR BE Off Trade Fair Share Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_Fair_Share_Audit_Item</fullName>
        <active>true</active>
        <label>EUR PT Off Trade Fair Share Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Off_Trade_Fair_Share_Audit_Item</fullName>
        <active>true</active>
        <label>EUR RU Off Trade Fair Share Audit Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>